# flower

./: .gitignore
examples/advanced_tensorflow/: client.py  pyproject.toml  server.py
examples/quickstart_tensorflow/: server.py
